# Biosimulators_tellurium

./: .all-contributorsrc  .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  README.md  biosimulators.json  properties.json  pyproject.toml  requirements.txt  setup.py
.github/actions/setup-poetry-env/: action.yml
.github/workflows/: ci.yml
Biosimulations_tellurium/: __main__.py  core.py
biosimulators_tellurium/: __init__.py  __main__.py  config.py  core.py  data_model.py  utils.py
docs/: about.html  genindex.html  index.html  index.rst  installation.html  installation.rst  py-modindex.html  search.html  searchindex.js  tutorial.html  tutorial.rst
docs-src/: about.rst  conf.py  installation.rst  tutorial.rst
docs/_static/: documentation_options.js
docs/source/: biosimulators_tellurium.html
tests/: requirements.txt  test.py  test_all.py  test_config.py  test_core_main.py  test_data_model.py
tests/fixtures/: BIOMD0000000297-with-plots.omex  BIOMD0000000297-with-reports-and-plots.omex  BIOMD0000000297-with-reports.omex  BIOMD0000000297.sedml  change_initial_assignment.omex  repeat_basic.omex  repeat_initial_assignment.omex  repeat_no_reset.omex
